[package]
name = "dpdk"
description = "a safe FFI library for DPDK"
keywords = ["dpdk"]
categories = ["network-programming"]

[dependencies]
libc = "0.2"
arrayvec = "0.7.4"
once_cell = "1.9.0"
dpdk-sys = { git="https://github.com/run-easy/dpdk-sys.git" }
rpkt = {git = "https://github.com/duanjp8617/rpkt.git", package = "rpkt", optional = true, version = "0.1.0"}

[features]
# `multiseg` feature enables non-contiguous `Mbuf` and `Pbuf`
# default = ["multiseg"]
multiseg = ["dep:rpkt"]
